@@ -17,89 +17,73 @@
 package com.echothree.control.user.workflow.server.command;
 
 import com.echothree.control.user.workflow.common.form.GetWorkflowDestinationPartyTypeForm;
-import com.echothree.control.user.workflow.common.result.GetWorkflowDestinationPartyTypeResult;
 import com.echothree.control.user.workflow.common.result.WorkflowResultFactory;
-import com.echothree.model.control.party.server.PartyControl;
+import com.echothree.model.control.party.common.PartyConstants;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.workflow.server.WorkflowControl;
-import com.echothree.model.data.party.server.entity.PartyType;
+import com.echothree.model.control.workflow.server.logic.WorkflowDestinationLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.workflow.server.entity.Workflow;
-import com.echothree.model.data.workflow.server.entity.WorkflowDestination;
 import com.echothree.model.data.workflow.server.entity.WorkflowDestinationPartyType;
-import com.echothree.model.data.workflow.server.entity.WorkflowStep;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetWorkflowDestinationPartyTypeCommand
-        extends BaseSimpleCommand<GetWorkflowDestinationPartyTypeForm> {
+        extends BaseSingleEntityCommand<WorkflowDestinationPartyType, GetWorkflowDestinationPartyTypeForm> {
     
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyConstants.PartyType_UTILITY, null),
+                new PartyTypeDefinition(PartyConstants.PartyType_EMPLOYEE, List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.WorkflowDestination.name(), SecurityRoles.PartyType.name())
+                        ))
+                ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("WorkflowStepName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("WorkflowDestinationName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("PartyTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of GetWorkflowDestinationPartyTypeCommand */
     public GetWorkflowDestinationPartyTypeCommand(UserVisitPK userVisitPK, GetWorkflowDestinationPartyTypeForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
     
     @Override
-    protected BaseResult execute() {
-        var workflowControl = (WorkflowControl)Session.getModelController(WorkflowControl.class);
-        GetWorkflowDestinationPartyTypeResult result = WorkflowResultFactory.getGetWorkflowDestinationPartyTypeResult();
-        String workflowName = form.getWorkflowName();
-        Workflow workflow = workflowControl.getWorkflowByName(workflowName);
-        
-        if(workflow != null) {
-            String workflowStepName = form.getWorkflowStepName();
-            WorkflowStep workflowStep = workflowControl.getWorkflowStepByName(workflow, workflowStepName);
-            
-            if(workflowStep != null) {
-                String workflowDestinationName = form.getWorkflowDestinationName();
-                WorkflowDestination workflowDestination = workflowControl.getWorkflowDestinationByName(workflowStep, workflowDestinationName);
-                
-                if(workflowDestination != null) {
-                    var partyControl = (PartyControl)Session.getModelController(PartyControl.class);
-                    String partyTypeName = form.getPartyTypeName();
-                    PartyType partyType = partyControl.getPartyTypeByName(partyTypeName);
-                    
-                    if(partyType != null) {
-                        WorkflowDestinationPartyType workflowDestinationPartyType = workflowControl.getWorkflowDestinationPartyType(workflowDestination, partyType);
-                        
-                        if(workflowDestinationPartyType != null) {
-                            result.setWorkflowDestinationPartyType(workflowControl.getWorkflowDestinationPartyTypeTransfer(getUserVisit(), workflowDestinationPartyType));
-                        } else {
-                            addExecutionError(ExecutionErrors.UnknownWorkflowDestinationPartyType.name(), workflowName,
-                                    workflowStepName, workflowDestinationName, partyTypeName);
-                        }
-                    } else {
-                        addExecutionError(ExecutionErrors.UnknownPartyTypeName.name(), partyTypeName);
-                    }
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownWorkflowDestinationName.name(), workflowName, workflowStepName,
-                            workflowDestinationName);
-                }
-            } else {
-                addExecutionError(ExecutionErrors.UnknownWorkflowStepName.name(), workflowName, workflowStepName);
-            }
-        } else {
-            addExecutionError(ExecutionErrors.UnknownWorkflowName.name(), workflowName);
+    protected WorkflowDestinationPartyType getEntity() {
+        var workflowName = form.getWorkflowName();
+        var workflowStepName = form.getWorkflowStepName();
+        var workflowDestinationName = form.getWorkflowDestinationName();
+        var partyTypeName = form.getPartyTypeName();
+
+        return WorkflowDestinationLogic.getInstance().getWorkflowDestinationPartyTypeByName(this, workflowName,
+                workflowStepName, workflowDestinationName, partyTypeName);
+    }
+
+    @Override
+    protected BaseResult getTransfer(WorkflowDestinationPartyType entity) {
+        var result = WorkflowResultFactory.getGetWorkflowDestinationPartyTypeResult();
+
+        if(entity != null) {
+            var workflowControl = (WorkflowControl)Session.getModelController(WorkflowControl.class);
+
+            result.setWorkflowDestinationPartyType(workflowControl.getWorkflowDestinationPartyTypeTransfer(getUserVisit(), entity));
         }
-        
+
         return result;
     }
-    
+
 }
